Wire commit-timestamp to SOURCE_DATE_EPOCH in docker-build pipelines

--- a/pipelines/core-services/core-services.yaml
+++ b/pipelines/core-services/core-services.yaml
@@ -233,6 +233,8 @@ spec:
       value: $(params.build-args-file)
     - name: SOURCE_URL
       value: $(tasks.clone-repository.results.url)
+    - name: SOURCE_DATE_EPOCH
+      value: $(tasks.clone-repository.results.commit-timestamp)
     - name: BUILDAH_FORMAT
       value: $(params.buildah-format)
     - name: HTTP_PROXY
