--- a/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
+++ b/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
@@ -172,6 +172,8 @@ spec:
       value: $(params.privileged-nested)
     - name: SOURCE_URL
       value: $(tasks.clone-repository.results.url)
+    - name: SOURCE_DATE_EPOCH
+      value: $(tasks.clone-repository.results.commit-timestamp)
     - name: BUILDAH_FORMAT
       value: $(params.buildah-format)
     - name: HTTP_PROXY
