--- a/pipelines/docker-build/patch.yaml
+++ b/pipelines/docker-build/patch.yaml
@@ -91,6 +91,8 @@
     value: "$(params.privileged-nested)"
   - name: SOURCE_URL
     value: "$(tasks.clone-repository.results.url)"
+  - name: SOURCE_DATE_EPOCH
+    value: "$(tasks.clone-repository.results.commit-timestamp)"
   - name: BUILDAH_FORMAT
     value: "$(params.buildah-format)"
   - name: HTTP_PROXY
