--- a/task/buildah-oci-ta/0.8/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.8/buildah-oci-ta.yaml
@@ -933,7 +933,7 @@ spec:
             VOLUME_MOUNTS+=(--volume /etc/rhsm/ca/redhat-uep.pem:/etc/rhsm/ca/redhat-uep.pem:Z)
           fi
 
-        elif [ "${HERMETIC}" != "true" ] && find /entitlement -name "*.pem" >>null; then
+        elif [ "${HERMETIC}" != "true" ] && find /entitlement -name "*.pem" >/dev/null; then
           cp -r --preserve=mode "$ENTITLEMENT_PATH" /tmp/entitlement
           VOLUME_MOUNTS+=(--volume /tmp/entitlement:/etc/pki/entitlement)
           echo "Adding the entitlement to the build"
@@ -1061,7 +1061,7 @@ spec:
           value: $(context.taskRun.name)
       script: |
         #!/bin/bash
-        set -e
+        set -euo pipefail
 
         echo "[$(date --utc -Ins)] Update CA trust"
 
@@ -1094,7 +1094,7 @@ spec:
           --tls-verify="$TLSVERIFY" \
           "$IMAGE" \
           "docker://${IMAGE%:*}:${TASKRUN_NAME}"; then
-          echo "Failed to push sbom image to ${IMAGE%:*}:${TASKRUN_NAME}"
+          echo "Failed to push image to ${IMAGE%:*}:${TASKRUN_NAME}"
           exit 1
         fi
 
@@ -1108,7 +1108,7 @@ spec:
           --tls-verify="$TLSVERIFY" \
           --digestfile "/var/workdir/image-digest" "$IMAGE" \
           "docker://$IMAGE"; then
-          echo "Failed to push sbom image to $IMAGE"
+          echo "Failed to push image to $IMAGE"
           exit 1
         fi
 
