feat(STONEINTG-1470): support snapshot-by-name in ec pipeline
- Add resolve-snapshot task: accepts SNAPSHOT as spec JSON or snapshot name,
  outputs SNAPSHOT_JSON for verify-enterprise-contract (pass-through or
  oc get snapshot + jq .spec).
- Update enterprise-contract pipeline: run resolve-snapshot first, pass
  tasks.resolve-snapshot.results.SNAPSHOT_JSON to verify as IMAGES; extend
  SNAPSHOT param description for snapshot-param-as-name ITS annotation.
- Add task test (JSON pass-through) and README for resolve-snapshot.

Assisted-by-AI: Cursor
Signed-off-by: Kasem Alem <kalem@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -35,6 +35,7 @@
 # renovate groupName=ec
 /task/tkn-bundle                    @konflux-ci/ec @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/tkn-bundle-oci-ta             @konflux-ci/ec @amisstea @avi-biton @gbenhaim @yftacherzog
+/task/resolve-snapshot              @konflux-ci/ec 
 /pipelines/enterprise-contract.yaml @konflux-ci/ec
 /.tekton/tasks/ec-checks.yaml       @konflux-ci/ec
 
