--- a/renovate.json
+++ b/renovate.json
@@ -71,6 +71,7 @@
       "matchFileNames": [
         ".tekton/tasks/ec-checks.yaml",
         "pipelines/enterprise-contract.yaml",
+        "task/resolve-snapshot/**",
         "task/tkn-bundle-oci-ta/**",
         "task/tkn-bundle/**"
       ]
