--- a/task/buildah-remote-oci-ta/0.8/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.8/buildah-remote-oci-ta.yaml
@@ -965,7 +965,7 @@ spec:
           VOLUME_MOUNTS+=(--volume /etc/rhsm/ca/redhat-uep.pem:/etc/rhsm/ca/redhat-uep.pem:Z)
         fi
 
-      elif [ "${HERMETIC}" != "true" ] && find /entitlement -name "*.pem" >>null; then
+      elif [ "${HERMETIC}" != "true" ] && find /entitlement -name "*.pem" >/dev/null; then
         cp -r --preserve=mode "$ENTITLEMENT_PATH" /tmp/entitlement
         VOLUME_MOUNTS+=(--volume /tmp/entitlement:/etc/pki/entitlement)
         echo "Adding the entitlement to the build"
