--- a/task/prefetch-dependencies-oci-ta/0.3/recipe.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.3/recipe.yaml
@@ -19,8 +19,8 @@ additionalSteps:
         mkdir -p /var/workdir/cachi2
         echo "true" > /var/workdir/source/.skip-trusted-artifacts
         echo "true" > /var/workdir/cachi2/.skip-trusted-artifacts
-        echo -n "${SOURCE_ARTIFACT}" > $(results.SOURCE_ARTIFACT.path)
-        echo -n "" > $(results.CACHI2_ARTIFACT.path)
+        printf '%s' "${SOURCE_ARTIFACT}" > "$(results.SOURCE_ARTIFACT.path)"
+        printf '' > "$(results.CACHI2_ARTIFACT.path)"
       fi
 description: Task that prefetches project dependencies for hermetic build.
 preferStepTemplate: true
