feat(build): minimal pipeline
Pipeline with minimal resources for demonstration and testing.

Following tasks have been removed as not suitable for demo/testing as
they require additional configuration with tokens:
* coverity-availability-check
* sast-coverity-check
* sast-snyk-check

Resources for buildah-oci-ta-min, git-clone-oci-ta-min,
prefetch-dependencies-oci-ta-min were configured based on a simple
example repo https://github.com/konflux-ci/sample-component-golang

Signed-off-by: Martin Basti <mbasti@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,10 +9,12 @@
 /task/buildah                               @konflux-ci/build-maintainers @Allda @jedinym
 /task/buildah-min                           @konflux-ci/build-maintainers @Allda @jedinym
 /task/buildah-oci-ta                        @konflux-ci/build-maintainers @Allda @jedinym
+/task/buildah-oci-ta-min                    @konflux-ci/build-maintainers @Allda @jedinym
 /task/buildah-remote                        @konflux-ci/build-maintainers @Allda @jedinym
 /task/buildah-remote-oci-ta                 @konflux-ci/build-maintainers @Allda @jedinym
 /task/git-clone                             @konflux-ci/build-maintainers
 /task/git-clone-oci-ta                      @konflux-ci/build-maintainers
+/task/git-clone-oci-ta-min                  @konflux-ci/build-maintainers
 /task/init                                  @konflux-ci/build-maintainers
 /task/pnc-prebuild-git-clone-oci-ta         @konflux-ci/build-maintainers @rnc
 /task/push-dockerfile                       @konflux-ci/build-maintainers
@@ -26,8 +28,9 @@
 /task/update-infra-deployments              @konflux-ci/build-maintainers
 
 # renovate groupName=build-prefetch
-/task/prefetch-dependencies         @konflux-ci/build-maintainers @a-ovchinnikov @brunoapimentel @eskultety @taylormadore
-/task/prefetch-dependencies-oci-ta  @konflux-ci/build-maintainers @a-ovchinnikov @brunoapimentel @eskultety @taylormadore
+/task/prefetch-dependencies             @konflux-ci/build-maintainers @a-ovchinnikov @brunoapimentel @eskultety @taylormadore
+/task/prefetch-dependencies-oci-ta      @konflux-ci/build-maintainers @a-ovchinnikov @brunoapimentel @eskultety @taylormadore
+/task/prefetch-dependencies-oci-ta-min  @konflux-ci/build-maintainers @a-ovchinnikov @brunoapimentel @eskultety @taylormadore
 
 # renovate groupName=build
 /task/generate-labels   @konflux-ci/build-maintainers @ralphbean
