--- a/renovate.json
+++ b/renovate.json
@@ -39,11 +39,13 @@
         "task/build-image-index/**",
         "task/build-image-manifest/**",
         "task/buildah-min/**",
+        "task/buildah-oci-ta-min/**",
         "task/buildah-oci-ta/**",
         "task/buildah-remote-oci-ta/**",
         "task/buildah-remote/**",
         "task/buildah/**",
         "task/generate-labels/**",
+        "task/git-clone-oci-ta-min/**",
         "task/git-clone-oci-ta/**",
         "task/git-clone/**",
         "task/init/**",
@@ -62,6 +64,7 @@
     {
       "groupName": "build-prefetch",
       "matchFileNames": [
+        "task/prefetch-dependencies-oci-ta-min/**",
         "task/prefetch-dependencies-oci-ta/**",
         "task/prefetch-dependencies/**"
       ]
