Remove support for Dockerfile downloading in Konflux Build Pipeline

--- a/task/push-dockerfile-oci-ta/0.1/push-dockerfile-oci-ta.yaml
+++ b/task/push-dockerfile-oci-ta/0.1/push-dockerfile-oci-ta.yaml
@@ -4,6 +4,7 @@ kind: Task
 metadata:
   name: push-dockerfile-oci-ta
   annotations:
+    build.appstudio.redhat.com/expires-on: "2026-04-30T00:00:00Z"
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, appstudio
   labels:
