fix(buildah): quote to prevent word splitting
fixing shellcheck alert about missing quoting an useless cat

Signed-off-by: Martin Basti <mbasti@redhat.com>

--- a/task/buildah-oci-ta-min/0.9/buildah-oci-ta-min.yaml
+++ b/task/buildah-oci-ta-min/0.9/buildah-oci-ta-min.yaml
@@ -1057,7 +1057,7 @@ spec:
         exit 1
       fi
 
-      cat "/var/workdir"/image-digest | tee $(results.IMAGE_DIGEST.path)
+      tee "$(results.IMAGE_DIGEST.path)" <"/var/workdir"/image-digest
       echo -n "$IMAGE" | tee $(results.IMAGE_URL.path)
       {
         echo -n "${IMAGE}@"
