--- a/task/buildah/0.9/buildah.yaml
+++ b/task/buildah/0.9/buildah.yaml
@@ -1017,7 +1017,7 @@ spec:
         exit 1
       fi
 
-      cat "$(workspaces.source.path)"/image-digest | tee $(results.IMAGE_DIGEST.path)
+      tee "$(results.IMAGE_DIGEST.path)" < "$(workspaces.source.path)"/image-digest
       echo -n "$IMAGE" | tee $(results.IMAGE_URL.path)
       {
         echo -n "${IMAGE}@"
