Fix description formatting in tkn-bundle-oci-ta.yaml
Refine description extraction from YAML to remove newlines and extra spaces. Newlines are currently breaking the build if it's a "tkn bundle push" with multiple objects within the same file (separated by "---")

--- a/task/tkn-bundle-oci-ta/0.2/tkn-bundle-oci-ta.yaml
+++ b/task/tkn-bundle-oci-ta/0.2/tkn-bundle-oci-ta.yaml
@@ -293,7 +293,7 @@ spec:
         if [ -f "${task_dir}/USAGE.md" ]; then
           ANNOTATIONS+=("dev.tekton.docs.usage=${URL}/tree/${REVISION}/${CONTEXT}/USAGE.md")
         fi
-        description=$(yq '.spec.description' "${FILES[@]}" | sed '/null/d' | tr -d '')
+        description=$(yq '.spec.description' "${FILES[@]}" | sed '/null/d' | tr '\n' ' ' | tr -s ' ' | sed 's/^ //;s/ $//')
         ANNOTATIONS+=("org.opencontainers.image.description=${description}")
 
         if [[ -n "$migration_image_digest" ]]; then
