fix(buildah): preserve label values containing equals signs in labels.json
The jq expression that converts label key=value pairs into JSON
uses split(=) to separate the key from the value. However, split
produces an array of ALL segments, and the old code only took .[1]
(the second element), silently discarding everything after the first
equals sign in the value.

For example, a label like description=foo=bar would produce:
  {description: foo}  (old, buggy)
  {description: foo=bar}  (new, correct)

Fix: replace .[1] with .[1:] | join(=) to re-join all segments
after the key, preserving the full original value.

Applied to all five buildah task variants:
- buildah
- buildah-min
- buildah-remote
- buildah-oci-ta
- buildah-remote-oci-ta

--- a/task/buildah-oci-ta/0.8/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.8/buildah-oci-ta.yaml
@@ -856,7 +856,7 @@ spec:
 
         printf '%s\n' "${label_pairs[@]}" | jq -Rn '
           [ inputs | select(length>0) ]
-        | map( split("=") | {(.[0]): (.[1] // "")} )
+        | map( split("=") | {(.[0]): (.[1:] | join("="))} )
           | add' >"image_labels.json"
 
         jq -s '(.[0] // {}) * (.[1] // {})' "base_images_labels.json" "image_labels.json" >"$SOURCE_CODE_DIR/$CONTEXT/labels.json"
