--- a/task/buildah-oci-ta/0.9/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.9/buildah-oci-ta.yaml
@@ -124,6 +124,26 @@ spec:
         image
       type: array
       default: []
+    - name: UNSET_LABELS
+      description: |-
+        Array of label names that should not be inherited from the base image.
+        This is useful to prevent inheriting base image metadata like name, version, description, etc.
+        Common examples: name, version, release, summary, description, io.k8s.description, io.k8s.display-name, com.redhat.component, url, vcs-ref, vcs-type, vendor, io.openshift.tags
+      type: array
+      default:
+      - name
+      - version
+      - release
+      - summary
+      - description
+      - io.k8s.description
+      - io.k8s.display-name
+      - com.redhat.component
+      - url
+      - vcs-ref
+      - vcs-type
+      - vendor
+      - io.openshift.tags
     - name: NO_PROXY
       description: Comma separated list of hosts or domains which should bypass
         the HTTP/HTTPS proxy.
@@ -406,6 +426,8 @@ spec:
         - $(params.ENV_VARS[*])
         - --labels
         - $(params.LABELS[*])
+        - --unset-labels
+        - $(params.UNSET_LABELS[*])
         - --annotations
         - $(params.ANNOTATIONS[*])
       workingDir: /var/workdir
@@ -553,6 +575,7 @@ spec:
         env_vars=()
 
         LABELS=()
+        UNSET_LABELS=()
         ANNOTATIONS=()
         # Append any annotations from the specified file
         if [ -n "${ANNOTATIONS_FILE}" ] && [ -f "${SOURCE_CODE_DIR}/${ANNOTATIONS_FILE}" ]; then
@@ -590,6 +613,13 @@ spec:
             shift
             while [[ $# -gt 0 && $1 != --* ]]; do
               LABELS+=("--label" "$1")
+              shift
+            done
+            ;;
+          --unset-labels)
+            shift
+            while [[ $# -gt 0 && $1 != --* ]]; do
+              UNSET_LABELS+=("--unsetlabel" "$1")
               shift
             done
             ;;
@@ -689,6 +719,11 @@ spec:
 
         if [ "${INHERIT_BASE_IMAGE_LABELS}" != "true" ]; then
           BUILDAH_ARGS+=("--inherit-labels=false")
+        fi
+
+        # Add --unsetlabel flags for labels that should not be inherited from base image
+        if [ ${#UNSET_LABELS[@]} -gt 0 ]; then
+          BUILDAH_ARGS+=("${UNSET_LABELS[@]}")
         fi
 
         if [ -n "${BUILDAH_SOURCE_DATE_EPOCH}" ]; then
