buildah: support compression-format and force-compression for image push

--- a/task/buildah-oci-ta/0.8/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.8/buildah-oci-ta.yaml
@@ -71,6 +71,11 @@ spec:
       description: The image is built from this commit.
       type: string
       default: ""
+    - name: COMPRESSION_FORMAT
+      description: Compression format for image layers (e.g., gzip, zstd,
+        zstd:chunked)
+      type: string
+      default: ""
     - name: CONTEXT
       description: Path to the directory to use as context.
       type: string
@@ -91,6 +96,11 @@ spec:
       description: Array of --env values ("env=value" strings)
       type: array
       default: []
+    - name: FORCE_COMPRESSION
+      description: Force recompression of all layers including base image
+        layers
+      type: string
+      default: "false"
     - name: HERMETIC
       description: Determines if build will be executed without network access.
       type: string
@@ -1059,6 +1069,14 @@ spec:
           value: $(params.BUILDAH_FORMAT)
         - name: TASKRUN_NAME
           value: $(context.taskRun.name)
+        - name: COMPRESSION_FORMAT
+          value: $(params.COMPRESSION_FORMAT)
+        - name: FORCE_COMPRESSION
+          value: $(params.FORCE_COMPRESSION)
+        - name: IMAGE
+          value: $(params.IMAGE)
+        - name: TLSVERIFY
+          value: $(params.TLSVERIFY)
       script: |
         #!/bin/bash
         set -e
@@ -1082,6 +1100,16 @@ spec:
           push_format=docker
         fi
 
+        COMPRESSION_ARGS=()
+
+        if [ -n "${COMPRESSION_FORMAT}" ]; then
+          COMPRESSION_ARGS+=(--compression-format="${COMPRESSION_FORMAT}")
+        fi
+
+        if [ "${FORCE_COMPRESSION}" == "true" ]; then
+          COMPRESSION_ARGS+=(--force-compression)
+        fi
+
         echo "[$(date --utc -Ins)] Push image with unique tag"
 
         buildah_retries=3
@@ -1092,6 +1120,7 @@ spec:
           --format="$push_format" \
           --retry "$buildah_retries" \
           --tls-verify="$TLSVERIFY" \
+          "${COMPRESSION_ARGS[@]}" \
           "$IMAGE" \
           "docker://${IMAGE%:*}:${TASKRUN_NAME}"; then
           echo "Failed to push sbom image to ${IMAGE%:*}:${TASKRUN_NAME}"
@@ -1106,6 +1135,7 @@ spec:
           --format="$push_format" \
           --retry "$buildah_retries" \
           --tls-verify="$TLSVERIFY" \
+          "${COMPRESSION_ARGS[@]}" \
           --digestfile "/var/workdir/image-digest" "$IMAGE" \
           "docker://$IMAGE"; then
           echo "Failed to push sbom image to $IMAGE"
